--- a/en/startups.html
+++ b/en/startups.html
@@ -143,7 +143,7 @@
         </li>
       </ul>
       <div class="langs">
-        <img src="../assets/img/language_24px.svg" alt="">
+        <img class="langs_image" src="../assets/img/language_24px.svg" alt="">
         <ul class="langs__list">
           <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">EN</a>
             <div class="dropdown-menu__content langs__submenu">
