--- a/cs/news.html
+++ b/cs/news.html
@@ -166,12 +166,12 @@
               <img src="../assets/img/new/scrin.png" class="apps__lead-image">
             </div>
             <div class="lead__text-container apps__lead-text-container">
-              <h3 class="lead__text">Обновление<br>05.12.2022</h3>
-              <p class="lead__text">06.12.2022 от DIANA AKHMETOVA</p>
-              <p class="lead__text">Совсем недавно в SFERA появилась возможность совершать видеозвонки и мы благодарны всем пользователям, кто активно тестирует функционал. Ежедневно нам поступают сообщения от пользователей с замечаниями и пожеланиями, к которым мы относимся очень внимательно.</p>
-              <details>
-                <summary>читать больше</summary>
-                <p>Раскрывающийся текст</p>
+              <h3 class="lead__text">Update<br>05.12.2022</h3>
+              <p class="lead__text">06.12.2022 by DIANA AKHMETOVA</p>
+              <p class="lead__text">Recently, SFERA has been able to make video calls and we are grateful to all users who are actively testing the functionality. Every day we receive messages from users with comments and suggestions, which we treat very carefully.</p>
+              <details class="details__list">
+                <summary>read more</summary>
+                <p>Drop-down text</p>
               </details>
             </div>
           </div>
@@ -184,12 +184,12 @@
                 <img src="../assets/img/new/scrin.png" class="apps__lead-image">
               </div>
               <div class="lead__text-container apps__lead-text-container">
-                <h3 class="lead__text">Обновление<br>05.12.2022</h3>
-                <p class="lead__text">06.12.2022 от DIANA AKHMETOVA</p>
-                <p class="lead__text">Совсем недавно в SFERA появилась возможность совершать видеозвонки и мы благодарны всем пользователям, кто активно тестирует функционал. Ежедневно нам поступают сообщения от пользователей с замечаниями и пожеланиями, к которым мы относимся очень внимательно.</p>
-                <details>
-                  <summary>читать больше</summary>
-                  <p>Раскрывающийся текст</p>
+                <h3 class="lead__text">Update<br>05.12.2022</h3>
+                <p class="lead__text">06.12.2022 by DIANA AKHMETOVA</p>
+                <p class="lead__text">Recently, SFERA has been able to make video calls and we are grateful to all users who are actively testing the functionality. Every day we receive messages from users with comments and suggestions, which we treat very carefully.</p>
+                <details class="details__list">
+                  <summary>read more</summary>
+                  <p>Drop-down text</p>
                 </details>
               </div>
             </div>
@@ -201,12 +201,12 @@
                   <img src="../assets/img/new/scrin.png" class="apps__lead-image">
                 </div>
                 <div class="lead__text-container apps__lead-text-container">
-                  <h3 class="lead__text">Обновление<br>05.12.2022</h3>
-                  <p class="lead__text">06.12.2022 от DIANA AKHMETOVA</p>
-                  <p class="lead__text">Совсем недавно в SFERA появилась возможность совершать видеозвонки и мы благодарны всем пользователям, кто активно тестирует функционал. Ежедневно нам поступают сообщения от пользователей с замечаниями и пожеланиями, к которым мы относимся очень внимательно.</p>
-                  <details>
-                    <summary>читать больше</summary>
-                    <p>Раскрывающийся текст</p>
+                  <h3 class="lead__text">Update<br>05.12.2022</h3>
+                  <p class="lead__text">06.12.2022 by DIANA AKHMETOVA</p>
+                  <p class="lead__text">Recently, SFERA has been able to make video calls and we are grateful to all users who are actively testing the functionality. Every day we receive messages from users with comments and suggestions, which we treat very carefully.</p>
+                  <details class="details__list">
+                    <summary>read more</summary>
+                    <p>Drop-down text</p>
                   </details>
                 </div>
               </div>
@@ -218,12 +218,12 @@
                     <img src="../assets/img/new/scrin.png" class="apps__lead-image">
                   </div>
                   <div class="lead__text-container apps__lead-text-container">
-                    <h3 class="lead__text">Обновление<br>05.12.2022</h3>
-                    <p class="lead__text">06.12.2022 от DIANA AKHMETOVA</p>
-                    <p class="lead__text">Совсем недавно в SFERA появилась возможность совершать видеозвонки и мы благодарны всем пользователям, кто активно тестирует функционал. Ежедневно нам поступают сообщения от пользователей с замечаниями и пожеланиями, к которым мы относимся очень внимательно.</p>
-                    <details>
-                      <summary>читать больше</summary>
-                      <p>Раскрывающийся текст</p>
+                    <h3 class="lead__text">Update<br>05.12.2022</h3>
+                    <p class="lead__text">06.12.2022 by DIANA AKHMETOVA</p>
+                    <p class="lead__text">Recently, SFERA has been able to make video calls and we are grateful to all users who are actively testing the functionality. Every day we receive messages from users with comments and suggestions, which we treat very carefully.</p>
+                    <details class="details__list">
+                      <summary>read more</summary>
+                      <p>Drop-down text</p>
                     </details>
                   </div>
                 </div>
