--- a/en/apps.html
+++ b/en/apps.html
@@ -548,7 +548,8 @@
           <p class="footer__copyright-text"><a class="link link_theme_dark" href="#">SFERA position</a></p>
           <p class="footer__copyright-text">© Copyright 2019-2022 <a class="link link_theme_dark" href="https://sfera.zone">https://sfera.zone</a> — SFERA Project | All rights reserved by SPHERE LLC</p>
         </div>
-      </div></footer>
+      </div>
+    </footer>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="../assets/js/apps.js"></script>
