--- a/ru/news.html
+++ b/ru/news.html
@@ -167,7 +167,7 @@
               <h3 class="lead__text">Обновление<br>05.12.2022</h3>
               <p class="lead__text">06.12.2022 от DIANA AKHMETOVA</p>
               <p class="lead__text">Совсем недавно в SFERA появилась возможность совершать видеозвонки и мы благодарны всем пользователям, кто активно тестирует функционал. Ежедневно нам поступают сообщения от пользователей с замечаниями и пожеланиями, к которым мы относимся очень внимательно.</p>
-              <details>
+              <details class="details__list">
                 <summary>читать больше</summary>
                 <p>Раскрывающийся текст</p>
               </details>
@@ -184,7 +184,7 @@
                 <h3 class="lead__text">Обновление<br>05.12.2022</h3>
                 <p class="lead__text">06.12.2022 от DIANA AKHMETOVA</p>
                 <p class="lead__text">Совсем недавно в SFERA появилась возможность совершать видеозвонки и мы благодарны всем пользователям, кто активно тестирует функционал. Ежедневно нам поступают сообщения от пользователей с замечаниями и пожеланиями, к которым мы относимся очень внимательно.</p>
-                <details>
+                <details class="details__list">
                   <summary>читать больше</summary>
                   <p>Раскрывающийся текст</p>
                 </details>
@@ -201,7 +201,7 @@
                   <h3 class="lead__text">Обновление<br>05.12.2022</h3>
                   <p class="lead__text">06.12.2022 от DIANA AKHMETOVA</p>
                   <p class="lead__text">Совсем недавно в SFERA появилась возможность совершать видеозвонки и мы благодарны всем пользователям, кто активно тестирует функционал. Ежедневно нам поступают сообщения от пользователей с замечаниями и пожеланиями, к которым мы относимся очень внимательно.</p>
-                  <details>
+                  <details class="details__list">
                     <summary>читать больше</summary>
                     <p>Раскрывающийся текст</p>
                   </details>
@@ -218,7 +218,7 @@
                     <h3 class="lead__text">Обновление<br>05.12.2022</h3>
                     <p class="lead__text">06.12.2022 от DIANA AKHMETOVA</p>
                     <p class="lead__text">Совсем недавно в SFERA появилась возможность совершать видеозвонки и мы благодарны всем пользователям, кто активно тестирует функционал. Ежедневно нам поступают сообщения от пользователей с замечаниями и пожеланиями, к которым мы относимся очень внимательно.</p>
-                  <details>
+                  <details class="details__list">
                     <summary>читать больше</summary>
                     <p>Раскрывающийся текст</p>
                   </details>
