--- a/en/news.html
+++ b/en/news.html
@@ -171,7 +171,7 @@
               <h3 class="lead__text">Inovace<br>05.12.2022</h3>
               <p class="lead__text">06.12.2022 DIANA ACHMETOVÁ</p>
               <p class="lead__text">Recently, SFERA has been able to make video calls and we are grateful to all users who are actively testing the functionality. Every day we receive messages from users with comments and suggestions, which we treat very carefully.</p>
-              <details>
+              <details class="details__list">
                 <summary>read more</summary>
                 <p>Drop-down text</p>
               </details>
@@ -189,7 +189,7 @@
                 <h3 class="lead__text">Update<br>05.12.2022</h3>
                 <p class="lead__text">06.12.2022 by DIANA AKHMETOVA</p>
                 <p class="lead__text">Recently, SFERA has been able to make video calls and we are grateful to all users who are actively testing the functionality. Every day we receive messages from users with comments and suggestions, which we treat very carefully.</p>
-                <details>
+                <details class="details__list">
                   <summary>read more</summary>
                   <p>Drop-down text</p>
                 </details>
@@ -206,7 +206,7 @@
                   <h3 class="lead__text">Update<br>05.12.2022</h3>
                   <p class="lead__text">06.12.2022 by DIANA AKHMETOVA</p>
                   <p class="lead__text">Recently, SFERA has been able to make video calls and we are grateful to all users who are actively testing the functionality. Every day we receive messages from users with comments and suggestions, which we treat very carefully.</p>
-                  <details>
+                  <details class="details__list">
                     <summary>read more</summary>
                     <p>Drop-down text</p>
                   </details>
@@ -223,7 +223,7 @@
                     <h3 class="lead__text">Update<br>05.12.2022</h3>
                     <p class="lead__text">06.12.2022 by DIANA AKHMETOVA</p>
                     <p class="lead__text">Recently, SFERA has been able to make video calls and we are grateful to all users who are actively testing the functionality. Every day we receive messages from users with comments and suggestions, which we treat very carefully.</p>
-                    <details>
+                    <details class="details__list">
                       <summary>read more</summary>
                       <p>Drop-down text</p>
                     </details>
