карточки не трогать

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 							<div class="product-back">
 								<img class="back"src="assets/animation en/ANDROID/01-asap-android-eng.gif" alt="ASAP android">
 							</div>
-							<div class="left-side eng-left-side"></div>
+							<div class="left-side"></div>
 						</div>
 						<p class="card-block-botton eng-card-block-botton">Multifunctional messenger</p>
 					</div>
@@ -241,7 +241,7 @@
 						<div class="product-back">
 								<img class="back" src="assets/animation en/ANDROID/02-profile-android-eng.gif" alt="Android Profile">
 						</div>
-						<div class="left-side eng-left-side"></div>
+						<div class="left-side"></div>
 					</div>
 					<p class="card-block-botton eng-card-block-botton">Personal page with personal information</p>
 				</div>
@@ -254,7 +254,7 @@
 						<div class="product-back">
 								<img class="back" src="assets/animation en/ANDROID/03-lenta-android-eng.gif" alt="Android News Feed">
 						</div>
-						<div class="left-side eng-left-side"></div>
+						<div class="left-side"></div>
 					</div>
 					<p class="card-block-botton eng-card-block-botton">News Feed with educational content</p>
 				</div>
@@ -267,7 +267,7 @@
 						<div class="product-back">
 								<img class="back" src="assets/animation en/ANDROID/04-videos-android-eng.gif" alt="Videos on android">
 						</div>
-						<div class="left-side eng-left-side"></div>
+						<div class="left-side"></div>
 					</div>
 					<p class="card-block-botton eng-card-block-botton">Short videos with useful content</p>
 				</div>
@@ -280,7 +280,7 @@
 						<div class="product-back">
 								<img class="back" src="assets/animation en/ANDROID/05-black-box-android-eng.gif" alt="Blackbox android">
 						</div>
-						<div class="left-side eng-left-side"></div>
+						<div class="left-side"></div>
 					</div>
 					<p class="card-block-botton eng-card-block-botton">Communication search service based on geolocation</p>
 				</div>
@@ -293,7 +293,7 @@
 						<div class="product-back">
 								<img class="back" src="assets/animation en/ANDROID/06-FF-android-eng.gif" alt="Search for friends">
 						</div>
-						<div class="left-side eng-left-side"></div>
+						<div class="left-side"></div>
 					</div>
 					<p class="card-block-botton eng-card-block-botton">Finding Friends In offline life</p>
 				</div>
@@ -308,7 +308,7 @@
 						<div class="product-back">
 								<img class="back" src="assets/animation en/ANDROID/07-Meet-Net-android-eng.gif" alt="Find a soul mate">
 						</div>
-						<div class="left-side eng-left-side"></div>
+						<div class="left-side"></div>
 					</div>
 					<p class="card-block-botton eng-card-block-botton">Sub-Application for dating and finding beloved one</p>
 				</div>
@@ -321,7 +321,7 @@
 						<div class="product-back">
 								<img class="back" src="assets/animation en/ANDROID/08-Job-Lite-android-eng.gif" alt="Job search">
 						</div>
-						<div class="left-side eng-left-side"></div>
+						<div class="left-side "></div>
 					</div>
 					<p class="card-block-botton eng-card-block-botton">Search platform for jobs and employees</p>
 				</div>
@@ -334,7 +334,7 @@
 						<div class="product-back">
 								<img class="back" src="assets/animation en/ANDROID/09-Choose-android-eng.gif" alt="Beautiful iPhone pictures">
 						</div>
-						<div class="left-side eng-left-side"></div>
+						<div class="left-side "></div>
 					</div>
 					<p class="card-block-botton eng-card-block-botton">Tough choice? Askadvice from other users</p>
 				</div>
