--- a/cs/apps.html
+++ b/cs/apps.html
@@ -168,11 +168,11 @@
                   <div class="apps__subapps">
                     <div>
 
-                      <h1 class="apps__subapps-title">my vytváříme<br><span class="lead__text-color" >superaplikaci </span></h1>
+                      <h1 class="apps__subapps-title">My vytváříme<br><span class="lead__text-color" >superaplikaci </span></h1>
                     </div>
                     <div>
-                      <p class="lead__text">Všechny servisy jsou nedílnou součástí<br> SFERA a fungují jako jediná aplikace.</p>
-                      <p class="lead__text">Momentálně jsou v systému<br> dostupné servisy první fáze vývoje.</p>
+                      <p class="lead__text">Všechny servisy jsou nedílnou součástí SFERA a fungují jako jediná aplikace.</p>
+                      <p class="lead__text">Momentálně jsou v systému dostupné servisy první fáze vývoje.</p>
 
                       </p>
                     </div>
