--- a/ru/apps.html
+++ b/ru/apps.html
@@ -166,7 +166,7 @@
                 <div class="apps__subapps-wrapper">
                   <div class="apps__subapps">
                     <div>
-                      <h1 class="apps__subapps-title">мы создаем<br><span class="lead__text-color" >суперприложение</span></h1>
+                      <h1 class="apps__subapps-title">Мы создаем<br><span class="lead__text-color" >суперприложение</span></h1>
                     </div>
                     <div>
                       <p class="lead__text">Все сервисы являются неотъемлемой частью SFERA и работают как единое приложение.</p>
