--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
 			</section>
 			<section class="section-two">
 				<div class="section-two-image">
-					<span ><img class="section-two-image-one" src="assets/image-lending/1920/block2ios.gif" alt="Android menu"></span>
-					<span><img class="section-two-image-two" src="assets/image-lending/1920/block2ios.gif" alt="iPhone menu"></span>
+					<span ><img class="section-two-image-one" src="assets/animation en/IOS/01-asap-ios-eng.gif" alt="Android menu"></span>
+					<span><img class="section-two-image-two" src="assets/animation en/ANDROID/01-asap-android-eng.gif" alt="iPhone menu"></span>
 				</div>
 				<div class="section-two-content">
 					<span class="section-two-content-message">Messenger</span>
