с большего все страници поправил

--- a/ru/investment.html
+++ b/ru/investment.html
@@ -161,7 +161,7 @@
         <div class="investment__wrapper">
           <div class="investment-body">
             <div class="investment-body-content">
-              <h1 class="investment-body__title">приглашаем <span class="investment-body__title_color">инвесторов</span></h1>
+              <h1 class="investment-body__title">Приглашаем <span class="investment-body__title_color">инвесторов</span></h1>
               <p class="investment-body__text">На данный момент финансирование проекта осуществляется засчёт собственных средств и средств инвесторов.</p>
               <p class="investment-body__text">Наша главная цель в работе с инвесторами — это Х100 для инвесторов</p>
               <ul class="lead__download-links-list">
