--- a/ru/startups.html
+++ b/ru/startups.html
@@ -163,7 +163,7 @@
         <div class="startups__wrapper">
           <div class="lead">
             <div class="lead__texts">
-              <h1 class="lead__title">приглашаем<br><span class="lead__title-color">стартапы</span></h1>
+              <h1 class="lead__title">Приглашаем<br><span class="lead__title-color">стартапы</span></h1>
               <p class="lead__text">Для действующих стартапов, которые находятся на стадии разработки или уже  имеют работающий функционал мы готовы  рассмотреть вопрос интеграции в SFERA, при соблюдении следующих условий.</p>
               <div class="lead__links-container apps__lead-links-container">
                 <ul class="lead__download-links-list">
