--- a/cs/investment.html
+++ b/cs/investment.html
@@ -164,7 +164,7 @@
           <div class="investment-body">
             <div class="investment-body-content">
 
-              <h1 class="investment-body__title">zveme <br><span class="investment-body__title_color">investory</span></h1>
+              <h1 class="investment-body__title">Zveme <br><span class="investment-body__title_color">investory</span></h1>
               <p class="investment-body__text">V současné době je projekt financován na úkor vlastních prostředků a prostředků investorů.</p>
               <p class="investment-body__text">Naším hlavním cílem při práci s investory — je X100<br> pro investory</p>
               <ul class="lead__download-links-list">
