--- a/en/investment.html
+++ b/en/investment.html
@@ -164,7 +164,7 @@
         <div class="investment__wrapper">
           <div class="investment-body">
             <div class="investment-body-content">
-              <h1 class="investment-body__title">We invite <span class="investment-body__title_color"> investors</span></h1>
+              <h1 class="investment-body__title">We invite <br><span class="investment-body__title_color"> investors</span></h1>
               <p class="investment-body__text">At the moment, the financing of the project is carried out using own funds and investors' funds.</p>
               <p class="investment-body__text">Our main goal in working with investors is X100 for investors</p>
               <ul class="lead__download-links-list">
