--- a/ru/downloads.html
+++ b/ru/downloads.html
@@ -172,9 +172,9 @@
             </div>
             <div class="lead__images">
               <div class="lead__image__ios">
-                <img src="../assets/img/downloads/android .png" class="lead__image" alt="телефон приложение андроид" /></div>
+                <img src="../assets/image-lending/1920/block 1-1.png" class="lead__image" alt="телефон приложение андроид" /></div>
               <div class="lead__image__android">
-                <img src="../assets/img/downloads/ios.png" class="lead__image" alt="телефон приложение айфон" /></div>
+                <img src="../assets/image-lending/1920/block 1-2.png" class="lead__image" alt="телефон приложение айфон" /></div>
             </div>
           </div>
         </div>
