button menu header

--- a/ru/index.html
+++ b/ru/index.html
@@ -130,8 +130,10 @@
 
 						</li>
 						<li class="download_button-tablet">
-							<a href="https://play.google.com/store/apps/details?id=zone.sfera" class="colorWhite button_download "><img src="../assets/img/buttons/button-image.svg"> Скачать на Android </a>
-							<a href="https://apps.apple.com/app/sfera-project/id1498046044" class=" colorWhite button_download "><img src="../assets/img/buttons/button-apple.svg" >Скачать на iOS</a>
+							<ul class="downloads_button">
+								<li class="lead__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="button_downloads_ios button button_theme_light button_type_ios">Скачать на iOS</a></li>
+								<li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="button_downloads_android button button_theme_light button_type_android">Скачать на Android </a></li>
+							</ul>
 						</li>
 						<li class="link_tablet-menu" >
 							<a class="menu-links" href="#"><i class="fa-brands fa-youtube fa-xl"></i></a>
