--- a/en/news.html
+++ b/en/news.html
@@ -137,12 +137,12 @@
           </ul>
         </li>
         <li class="link_tablet-menu" >
-          <a class="menu-links" href="#"><i class="fa-brands fa-youtube fa-xl"></i></a>
-          <a class="menu-links" href="#"><i class="fa-brands fa-tiktok fa-xl"></i></a>
-          <a class="menu-links" href="#"><i class="fa-brands fa-vk fa-xl"></i></a>
-          <a class="menu-links" href="#"><i class="fa-brands fa-yandex fa-xl" ></i></a>
-          <a class="menu-links" href="#"><i class="fa-brands fa-instagram fa-xl"></i></a>
-        </li>
+          <a class="menu-links" href="https://www.youtube.com/@sfera_zone"><i class="fa-brands fa-youtube fa-xl"></i></a>
+          <a class="menu-links" href="https://www.tiktok.com/@project_sfera"><i class="fa-brands fa-tiktok fa-xl"></i></a>
+          <a class="menu-links" href="https://vk.com/projectsfera"><i class="fa-brands fa-vk fa-xl"></i></a>
+          <a class="menu-links" href=" https://dzen.ru/sferalive"><i class="fa-brands fa-yandex fa-xl" ></i></a>
+          <a class="menu-links" href=" https://www.instagram.com/sfera_motivator/"><i class="fa-brands fa-instagram fa-xl"></i></a>
+      </li>
       </ul>
       <div class="langs">
         <img class="langs_image" src="../assets/img/language_24px.svg" alt="">
@@ -224,15 +224,17 @@
                   <div class="lead__text-container apps__lead-text-container">
                     <h3 class="lead__text">Update<br>05.12.2022</h3>
                     <p class="lead__text">06.12.2022 by DIANA AKHMETOVA</p>
-                    <p class="lead__text">Recently, SFERA has been able to make video calls and we are grateful to all users who are actively testing the functionality. Every day we receive messages from users with comments and suggestions, which we treat very carefully.</p>
-                    <details class="details__list">
-                      <summary>read more</summary>
-                      <p>Drop-down text</p>
-                    </details>
+                    <ul class="venchur-body__link">
+                      <li class="venchur-body-list">Recently, SFERA has been able to make video calls and we are grateful to all users who are actively testing the functionality. Every day we receive messages from users with comments and suggestions, which we treat very carefully.<span id="dots">...</span> <span id="more">
+                        an enterprise, not a more stable company. The mechanism of participation in the success of the startup was an option to buy shares — a paper obligation that became the currency of Silicon Valley. Stock options have turned Silicon Valley into the modern equivalent of the gold rush.
+                        A stock option gives an employee the opportunity to purchase shares in the company in the future. Its value lies in the fact that the employee does not have to pay for the shares immediately, but the price he will pay in due time is set at the moment when the employee receives this option, usually when he or she comes to work in the company. If a company becomes very successful after a person has come to work there, the value of the shares can grow to astronomical amounts, but the employee will pay exactly the amount that was set at the time of receiving the option. The rest is his profit. For example, if a company's share is worth $ 1 apiece at the time of receipt of a person and if he receives an option to buy thousands of shares
+                      </span></li>
+                      <a id="btn" onclick="readMore()">Read more</a>
+                    </ul>
                   </div>
                 </div>
               </section>
-    </main>
+    </main><hr>
 
     <footer class="footer section section_theme_dark" role="footer">
       <div class="footer__container">
@@ -254,11 +256,11 @@
         </div>
         <div class="footer__social-links">
           <ul class="socials-list">
-            <li class="socials-list__item"><a class="socials-list__link socials-list_type_youtube" href="#" title="Our YouTube channel">YouTube</a></li>
-            <li class="socials-list__item"><a class="socials-list__link socials-list_type_tiktok" href="#" title="We are iTiktok">TikTok </a></li>
-            <li class="socials-list__item"><a class="socials-list__link socials-list_type_vk" href="#" title="We are VKontakte">VKontakte</a></li>
-            <li class="socials-list__item"><a class="socials-list__link socials-list_type_dzen" href="#" title="We are Zen">Dzen</a></li>
-            <li class="socials-list__item"><a class="socials-list__link socials-list_type_instagram" href="#" title="Our Instagram">Instagram </a></li>
+            <li class="socials-list__item"><a class="socials-list__link socials-list_type_youtube" href="https://www.youtube.com/@sfera_zone"target="_blank" title="Our YouTube channel">YouTube</a></li>
+						<li class="socials-list__item"><a class="socials-list__link socials-list_type_tiktok" href=" https://www.tiktok.com/@project_sfera"target="_blank" title="We are iTiktok">TikTok </a></li>
+						<li class="socials-list__item"><a class="socials-list__link socials-list_type_vk" href="https://vk.com/projectsfera"target="_blank" title="We are VKontakte">VKontakte</a></li>
+						<li class="socials-list__item"><a class="socials-list__link socials-list_type_dzen" href=" https://dzen.ru/sferalive"target="_blank" title="We are Zen">Dzen</a></li>
+						<li class="socials-list__item"><a class="socials-list__link socials-list_type_instagram" href=" https://www.instagram.com/sfera_motivator/"target="_blank" title="Our Instagram">Instagram </a></li>
           </ul>
         </div>
         <a href="" class="footer-top"><img src="../assets/img/arrow_upward_24px.svg" alt=""></a>
@@ -272,7 +274,7 @@
 
     </div>
    <script src="https://kit.fontawesome.com/d455f88091.js" crossorigin="anonymous"></script>
-   <script src="assets/js/main.3.ddda2f0e.js" defer></script>
-   <script src="../assets/js/main.js"></script>
+  
+   <script src="../assets/js/invesr.en.js"></script>
   </body>
 </html>
