--- a/cs/index.html
+++ b/cs/index.html
@@ -9,7 +9,7 @@
 		<meta name="keywords" content="ASAP, Профиль, Лента, Видео, Videos, BlackBox, FindFriends, MeetNet, JobLite, Choose">
 		<title>SFERA</title>
 		<link rel="stylesheet" href="../assets/css/landing.css">
-		<link rel="stylesheet" href="../assets/css/lending-card-cs.css">
+		<link rel="stylesheet" href="../assets/css/landing-card.css">
 		<link rel="stylesheet" href="../assets/css/main.e1ae0bf9.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="https://kit.fontawesome.com/d455f88091.css" crossorigin="anonymous">
@@ -129,17 +129,17 @@
 					</li>
 					<li class="download_button-tablet">
 						<ul class="downloads_button">
-							<li class="lead__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="button_downloads_ios button button_theme_light button_type_ios">Download on iOS</a></li>
-							<li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="button_downloads_android button button_theme_light button_type_android">Download on Android </a></li>
+							<li class="lead__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="button_downloads_ios button button_theme_light button_type_ios">Stáhnout na IOS</a></li>
+							<li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="button_downloads_android button button_theme_light button_type_android">Stáhnout na Android </a></li>
 						</ul>
 					</li>
-						<li class="link_tablet-menu" >
-							<a class="menu-links" href="#"><i class="fa-brands fa-youtube fa-xl"></i></a>
-							<a class="menu-links" href="#"><i class="fa-brands fa-tiktok fa-xl"></i></a>
-							<a class="menu-links" href="#"><i class="fa-brands fa-vk fa-xl"></i></a>
-							<a class="menu-links" href="#"><i class="fa-brands fa-yandex fa-xl" ></i></a>
-							<a class="menu-links" href="#"><i class="fa-brands fa-instagram fa-xl"></i></a>
-						</li>
+					<li class="link_tablet-menu" >
+						<a class="menu-links" href="https://www.youtube.com/@sfera_zone" target="_blank"><i class="fa-brands fa-youtube fa-xl"></i></a>
+						<a class="menu-links" href="https://www.tiktok.com/@project_sfera" target="_blank"><i class="fa-brands fa-tiktok fa-xl"></i></a>
+						<a class="menu-links" href="https://vk.com/projectsfera" target="_blank"><i class="fa-brands fa-vk fa-xl"></i></a>
+						<a class="menu-links" href=" https://dzen.ru/sferalive" target="_blank"><i class="fa-brands fa-yandex fa-xl" ></i></a>
+						<a class="menu-links" href=" https://www.instagram.com/sfera_motivator/" target="_blank"><i class="fa-brands fa-instagram fa-xl"></i></a>
+				</li> 
 					</ul>
 				</div>
 				<div class="langs">
@@ -471,11 +471,11 @@
         </div>
         <div class="footer__social-links">
           <ul class="socials-list">
-            <li class="socials-list__item"><a class="socials-list__link socials-list_type_youtube" href="#" title="Наш канал в Ютубе">YouTube</a></li>
-            <li class="socials-list__item"><a class="socials-list__link socials-list_type_tiktok" href="#" title="Мы в ТикТоке">TikTok </a></li>
-            <li class="socials-list__item"><a class="socials-list__link socials-list_type_vk" href="#" title="Мы ВКонтакте">VKontakte</a></li>
-            <li class="socials-list__item"><a class="socials-list__link socials-list_type_dzen" href="#" title="Мы Дзене">Дзен</a></li>
-            <li class="socials-list__item"><a class="socials-list__link socials-list_type_instagram" href="#" title="Наш Инстаграм">Instagram </a></li>
+						<li class="socials-list__item"><a class="socials-list__link socials-list_type_youtube" href="https://www.youtube.com/@sfera_zone"target="_blank" title="Our YouTube channel">YouTube</a></li>
+						<li class="socials-list__item"><a class="socials-list__link socials-list_type_tiktok" href=" https://www.tiktok.com/@project_sfera"target="_blank" title="We are iTiktok">TikTok </a></li>
+						<li class="socials-list__item"><a class="socials-list__link socials-list_type_vk" href="https://vk.com/projectsfera"target="_blank" title="We are VKontakte">VKontakte</a></li>
+						<li class="socials-list__item"><a class="socials-list__link socials-list_type_dzen" href=" https://dzen.ru/sferalive"target="_blank" title="We are Zen">Dzen</a></li>
+						<li class="socials-list__item"><a class="socials-list__link socials-list_type_instagram" href=" https://www.instagram.com/sfera_motivator/"target="_blank" title="Our Instagram">Instagram </a></li>
           </ul>
         </div>
         <a href="" class="footer-top"><img src="../assets/img/arrow_upward_24px.svg" alt=""></a>
