--- a/en/downloads.html
+++ b/en/downloads.html
@@ -137,12 +137,12 @@
           </ul>
         </li>
         <li class="link_tablet-menu" >
-          <a class="menu-links" href="#"><i class="fa-brands fa-youtube fa-xl"></i></a>
-          <a class="menu-links" href="#"><i class="fa-brands fa-tiktok fa-xl"></i></a>
-          <a class="menu-links" href="#"><i class="fa-brands fa-vk fa-xl"></i></a>
-          <a class="menu-links" href="#"><i class="fa-brands fa-yandex fa-xl" ></i></a>
-          <a class="menu-links" href="#"><i class="fa-brands fa-instagram fa-xl"></i></a>
-        </li>
+          <a class="menu-links" href="https://www.youtube.com/@sfera_zone" target="_blank"><i class="fa-brands fa-youtube fa-xl"></i></a>
+          <a class="menu-links" href="https://www.tiktok.com/@project_sfera" target="_blank"><i class="fa-brands fa-tiktok fa-xl"></i></a>
+          <a class="menu-links" href="https://vk.com/projectsfera" target="_blank"><i class="fa-brands fa-vk fa-xl"></i></a>
+          <a class="menu-links" href=" https://dzen.ru/sferalive" target="_blank"><i class="fa-brands fa-yandex fa-xl" ></i></a>
+          <a class="menu-links" href=" https://www.instagram.com/sfera_motivator/" target="_blank"><i class="fa-brands fa-instagram fa-xl"></i></a>
+      </li> 
       </ul>
       <div class="langs">
         <img class="langs_image" src="../assets/img/language_24px.svg" alt="">
