--- a/en/startups.html
+++ b/en/startups.html
@@ -137,12 +137,12 @@
           </ul>
         </li>
         <li class="link_tablet-menu" >
-          <a class="menu-links" href="#"><i class="fa-brands fa-youtube fa-xl"></i></a>
-          <a class="menu-links" href="#"><i class="fa-brands fa-tiktok fa-xl"></i></a>
-          <a class="menu-links" href="#"><i class="fa-brands fa-vk fa-xl"></i></a>
-          <a class="menu-links" href="#"><i class="fa-brands fa-yandex fa-xl" ></i></a>
-          <a class="menu-links" href="#"><i class="fa-brands fa-instagram fa-xl"></i></a>
-        </li>
+          <a class="menu-links" href="https://www.youtube.com/@sfera_zone"><i class="fa-brands fa-youtube fa-xl"></i></a>
+          <a class="menu-links" href="https://www.tiktok.com/@project_sfera"><i class="fa-brands fa-tiktok fa-xl"></i></a>
+          <a class="menu-links" href="https://vk.com/projectsfera"><i class="fa-brands fa-vk fa-xl"></i></a>
+          <a class="menu-links" href=" https://dzen.ru/sferalive"><i class="fa-brands fa-yandex fa-xl" ></i></a>
+          <a class="menu-links" href=" https://www.instagram.com/sfera_motivator/"><i class="fa-brands fa-instagram fa-xl"></i></a>
+      </li>
       </ul>
       <div class="langs">
         <img class="langs_image" src="../assets/img/language_24px.svg" alt="">
@@ -232,11 +232,11 @@
         </div>
         <div class="footer__social-links">
           <ul class="socials-list">
-            <li class="socials-list__item"><a class="socials-list__link socials-list_type_youtube" href="#" title="Our YouTube channel">YouTube</a></li>
-            <li class="socials-list__item"><a class="socials-list__link socials-list_type_tiktok" href="#" title="We are iTiktok">TikTok </a></li>
-            <li class="socials-list__item"><a class="socials-list__link socials-list_type_vk" href="#" title="We are VKontakte">VKontakte</a></li>
-            <li class="socials-list__item"><a class="socials-list__link socials-list_type_dzen" href="#" title="We are Zen">Dzen</a></li>
-            <li class="socials-list__item"><a class="socials-list__link socials-list_type_instagram" href="#" title="Our Instagram">Instagram </a></li>
+            <li class="socials-list__item"><a class="socials-list__link socials-list_type_youtube" href="https://www.youtube.com/@sfera_zone"target="_blank" title="Our YouTube channel">YouTube</a></li>
+						<li class="socials-list__item"><a class="socials-list__link socials-list_type_tiktok" href=" https://www.tiktok.com/@project_sfera"target="_blank" title="We are iTiktok">TikTok </a></li>
+						<li class="socials-list__item"><a class="socials-list__link socials-list_type_vk" href="https://vk.com/projectsfera"target="_blank" title="We are VKontakte">VKontakte</a></li>
+						<li class="socials-list__item"><a class="socials-list__link socials-list_type_dzen" href=" https://dzen.ru/sferalive"target="_blank" title="We are Zen">Dzen</a></li>
+						<li class="socials-list__item"><a class="socials-list__link socials-list_type_instagram" href=" https://www.instagram.com/sfera_motivator/"target="_blank" title="Our Instagram">Instagram </a></li>
           </ul>
         </div>
 				<a href="" class="footer-top"><img src="../assets/img/arrow_upward_24px.svg" alt=""></a>
