--- a/cs/investment.html
+++ b/cs/investment.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="assets/img/favicon-16px.51bc9ce7.png" type="image/png" sizes="16x16">
   <link rel="icon" href="assets/img/favicon-32px.89beb086.png" type="image/png" sizes="32x32">
   <link rel="icon" href="assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
-  <title>SFERA</title>
+  <title>Oficiální web projektu SFERA, sociální síť.</title>
   <link href="../assets/css/main.e1ae0bf9.css" rel="stylesheet">
   
   <link href="../assets/css/invest.css" rel="stylesheet">
@@ -176,7 +176,7 @@
               </ul>
             </div>
             <div class="investment__column">
-              <img class="investment__image ibg" src="../assets/en-img/invest.png" alt="Телефон айфон Инвестиции">
+              <img class="investment__image ibg" src="../assets/en-img/invest.png" alt="Telefon iPhone investice">
             </div>
           </div>
         </div>
@@ -185,7 +185,7 @@
         <div class="card__wrapper">
           <div class="card">
            <div class="card__column">
-            <img class="card__image-center" src="../assets/img/investment/investment_card.png" alt="Банковская картка" />
+            <img class="card__image-center" src="../assets/img/investment/investment_card.png" alt="Bankovní karta" />
           </div>
         <div class="card__column">
           <div class="card-body">
