--- a/cs/startups.html
+++ b/cs/startups.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="assets/img/favicon-16px.51bc9ce7.png" type="image/png" sizes="16x16">
   <link rel="icon" href="assets/img/favicon-32px.89beb086.png" type="image/png" sizes="32x32">
   <link rel="icon" href="assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
-  <title>SFERA</title>
+  <title>Oficiální web projektu SFERA, sociální síť.</title>
   <link href="../assets/css/main.e1ae0bf9.css" rel="stylesheet">
 
   <link href="../assets/css/startups.css" rel="stylesheet">
@@ -207,7 +207,7 @@
       <div class="frame__wrapper">
         <div class="frame__list__main">
           <ul  class="frame__list">
-            <li class="frame__list__item"><img class="frame__list__image" src="../assets/img/startups-png/sfera.png" alt="Приложение сфера " /></li>
+            <li class="frame__list__item"><img class="frame__list__image" src="../assets/img/startups-png/sfera.png" alt="Aplikace SFERA " /></li>
 
             <li class="frame__list__item">My počítáme s tím, že mnoho servisů jsou pro uživatele jistě užitečné a nezbytné, ale často se kvůli vysokým nákladům na vývoj nebo nákladům na přilákání uživatele stává realizace projektů nemožná. V rámci projektu SFERA jsou náklady na vývoj několikanásobně sníženy a není třeba nést finanční náklady na marketing.</li>
 
