--- a/en/apps.html
+++ b/en/apps.html
@@ -9,9 +9,9 @@
   <link rel="icon" href="/assets/img/favicon-16px.51bc9ce7.png" type="image/png" sizes="16x16">
   <link rel="icon" href="/assets/img/favicon-32px.89beb086.png" type="image/png" sizes="32x32">
   <link rel="icon" href="/assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
-  <meta name="description" content="Sfera, Messenger, Job Search, Vacancies, Dating Site, Friend Search, Quality Calls, Investing, Digital Economy, Tape, Video">
+  <meta name="description" content="SFERA is a mobile application that includes messenger, dating, job search, social network and much more. In the SPHERE platform, dozens of applications interact closely with each other.">
   <meta name="keywords" content="ASAP, Profile, Feed, Video, Videos, BlackBox, FindFriends, MeetNet, JobLite, Choose">
-  <title>SFERA</title>
+  <title>SFERA Project &#x2d; Official website, social network.</title>
 
   <link href="../assets/css/main.e1ae0bf9.css" rel="stylesheet">
   <link rel="stylesheet" href="../assets/css/apps.css">
