--- a/en/startups.html
+++ b/en/startups.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="assets/img/favicon-16px.51bc9ce7.png" type="image/png" sizes="16x16">
   <link rel="icon" href="assets/img/favicon-32px.89beb086.png" type="image/png" sizes="32x32">
   <link rel="icon" href="assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
-  <title>SFERA</title>
+  <title>SFERA Project &#x2d; Official website, social network.</title>
   <link href="../assets/css/main.e1ae0bf9.css" rel="stylesheet">
   <link href="../assets/css/styles.af24c77d.css" rel="stylesheet">
   <link href="../assets/css/startups.css" rel="stylesheet">
@@ -206,7 +206,7 @@
       <div class="frame__wrapper">
         <div class="frame__list__main">
           <ul  class="frame__list">
-            <li class="frame__list__item"><img class="frame__list__image" src="../assets/img/startups-png/sfera.png" alt="Приложение сфера " /></li>
+            <li class="frame__list__item"><img class="frame__list__image" src="../assets/img/startups-png/sfera.png" alt="The SFERA application" /></li>
             <li class="frame__list__item">We believe that many services are certainly useful and necessary for users, but often, due to the high cost of development or the cost of attracting a user, the implementation of projects becomes impossible. As part of the SFERA project, the cost of development is reduced several times and there is no need to incur financial costs for marketing.</li>
           </ul>
         </div>
