--- a/en/team.html
+++ b/en/team.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="assets/img/favicon-16px.51bc9ce7.png" type="image/png" sizes="16x16">
     <link rel="icon" href="assets/img/favicon-32px.89beb086.png" type="image/png" sizes="32x32">
     <link rel="icon" href="assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
-    <title>SFERA</title>
+    <title>SFERA Project &#x2d; Official website, social network.</title>
     <link href="../assets/css/main.e1ae0bf9.css" rel="stylesheet">
     <link href="../assets/css/team.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
