--- a/ru/index.html
+++ b/ru/index.html
@@ -4,9 +4,9 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="Sfera, Мессенджер, Поиск работы, Вакансии, Сайт знакомств, Поиск друзей, Качественные звонки, Инвестирование, Цифровая экономика, Лента, Видео">
+		<meta name="description" content="SFERA это мобильное приложение, которое включает в себя мессенджер, знакомства, поиск работы, социальная сеть и многое другое. В платформе СФЕРА десятки приложений тесно взаимодействуют между собой.">
 		<meta name="keywords" content="ASAP, Профиль, Лента, Видео, Videos, BlackBox, FindFriends, MeetNet, JobLite, Choose">
-		<title>SFERA</title>
+		<title>Проект SFERA &#x2d; Официальный сайт, социальная сеть.</title>
 		<link rel="stylesheet" href="../assets/css/landing.css">
 		<link rel="stylesheet" href="../assets/css/landing-card.css">
 		<link rel="stylesheet" href="../assets/css/main.e1ae0bf9.css">
@@ -364,7 +364,7 @@
 								<img class="front" src="../assets/image-lending/1920/09-choose-ios-rus.gif" alt="Красифые картинки айфон">
 						</div>
 						<div class="product-back">
-								<img class="back" src="../assets/image-lending/1920/09-choose-android-rus.gif" alt="Красифые картинки айфон">
+								<img class="back" src="../assets/image-lending/1920/09-choose-android-rus.gif" alt="Красифые картинки андроид">
 						</div>
 						<div class="left-side"></div>
 					</div>
