--- a/ru/investment.html
+++ b/ru/investment.html
@@ -181,7 +181,7 @@
         <div class="card__wrapper">
           <div class="card">
             <div class="card__column">
-              <img class="card__image-center" src="../assets/img/investment/investment_card.png" alt="Банковская картка" />
+              <img class="card__image-center" src="../assets/img/investment/investment_card.png" alt="Банковская карта" />
           </div>
         <div class="card__column">
           <div class="card-body">
