--- a/cs/investment.html
+++ b/cs/investment.html
@@ -27,7 +27,7 @@
         <div class="block-logo">
             <div class="video-container">
                 <span class="close">&#10006;</span>
-                <video class="video" src="../assets/video/video.mp4" controls></video>
+                <video class="video" src="../assets/video/promo cs.mp4" controls></video>
             </div>
             <i class="button button_form_circle button_theme_image link_hide-text  video-player" ><span class="button__play-video">Просмотреть видео о SFERA</span></i>
             <label class="logo">
