--- a/cs/index.html
+++ b/cs/index.html
@@ -362,7 +362,7 @@
 						<p class="card-block-botton">Těžká volba? Zeptejte se na názor ostatních uživatelů</p>
 					</div>
 					<div class="card-block card-block-link-botton">
-						<a class="card-block__link"  href="../ru/apps.html">APLIKACI SFERA &#8702; </a>
+						<a class="card-block__link eng-card-block__link"  href="../ru/apps.html">APLIKACI SFERA &#8702; </a>
 					</div>
 				</div>
 			</section> 
