--- a/ru/index.html
+++ b/ru/index.html
@@ -371,7 +371,7 @@
 					<p class="card-block-botton">Трудный выбор? Спроси мнение других пользователей</p>
 				</div>
 				<div class="card-block card-block-link-botton">
-					<a class="card-block__link"  href="../ru/apps.html">Приложения SFERA &#8702; </a>
+					<a class="card-block__link eng-card-block__link"  href="../ru/apps.html">Приложения SFERA &#8702; </a>
 				</div>
 			</div>
 		</section> 
