--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 			<section class="section__landing">
 				<div class="section-first">
 					<ul class="list-left">
-						<li class="section-first-paragraf"><span class="section-first-color-sfera">SFERA</span> - IS NOT ONLY</li>
+						<li class="section-first-paragraf"><span class="section-first-color-sfera">SFERA</span> - is not only</li>
 						<li class="link-list-left"><img src="./assets/image-lending/general/check_circle_outline_24px.svg" alt="Check mark " class="link-list-left-one">Excellent call quality</li>
 						<li class="link-list-left"><img src="./assets/image-lending/general/check_circle_outline_24px.svg" alt="Check mark" class="link-list-left-one">Easy job search</li>
 						<li class="link-list-left"><img src="./assets/image-lending/general/check_circle_outline_24px.svg" alt="Check mark" class="link-list-left-one">Dating service</li>
