--- a/ru/investment.html
+++ b/ru/investment.html
@@ -23,13 +23,13 @@
       <label for="myCheck" class="checkButton">
         <i class="fa fa-bars"></i>
       </label>
-      <div class="block-logo">
+      <div class="block-logo block-logo-rus">
         <div class="video-container">
           <span class="close">&#10006;</span>
           <video class="video" src="../assets/video/video.mp4" controls></video>
         </div>
         <i class="button button_form_circle button_theme_image link_hide-text  video-player" ><span class="button__play-video">Просмотреть видео о SFERA</span></i>
-        <label class="logo">
+        <label class="logo logo-rus">
           <svg width="247" height="40"  viewBox="0 0 247 40" fill="none" class="logo__image">
             <g filter="url(#filter0_i_6961_2109)">
               <path d="M14.4968 22.9517L14.3307 22.8966L14.0538 22.8414L14.0049 22.8287C12.72 22.4948 10.371 21.8846 8.18405 20.4138C5.08304 18.3724 3.36641 15.3931 3.20029 11.6966C3.03416 8.6069 4.03092 5.90345 6.02442 3.8069C8.90393 0.827586 13.0571 0 15.0506 0C20.6888 0 23.844 2.03414 26.6643 3.85237L26.6793 3.86207L27.953 4.68965L23.9106 11.2552L22.5262 10.3724L22.468 10.335C20.0091 8.7561 18.4021 7.72414 15.0506 7.72414C14.5522 7.72414 12.6141 8.11035 11.6173 9.15862C11.2851 9.48965 10.8974 10.0966 10.9528 11.3655C11.0082 13.3517 12.3926 14.4552 15.9366 15.3379C16.3796 15.4483 16.7118 15.5586 17.0441 15.669C20.7542 16.9379 23.6337 18.6483 25.6272 20.8C27.6207 23.0069 28.6729 25.6 28.6729 28.3586C28.6729 31.0621 27.51 33.8759 25.5718 36.0276C23.3015 38.5655 20.1451 40 16.6564 40C14.9398 40 12.6141 39.8897 9.8453 39.0621C6.35667 37.9586 3.25566 36.0276 0.597656 33.2138L6.24592 27.9172C10.3437 32.2759 14.9398 32.2759 16.6564 32.2759C19.8682 32.2759 20.9203 29.3517 20.9203 28.3586C20.9203 26.2621 18.5392 24.331 14.4968 22.9517Z" fill="white" />
@@ -144,7 +144,7 @@
 				</li> 
         </ul>
       </div>
-      <div class="langs">
+      <div class="langs langs-rus ">
         <img class="langs_image" src="../assets/img/language_24px.svg" alt="">
         <ul class="langs__list">
           <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">RU</a>
