--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
 						<li class="socials-list__item"><a class="socials-list__link socials-list_type_instagram" href=" https://www.instagram.com/sfera_motivator/"target="_blank" title="Our Instagram">Instagram </a></li>
 					</ul>
 				</div>
-				<a href="" class="footer-top"><img src="./assets/img/arrow_upward_24px.svg" alt=""></a>
+				<a href="#section__landing" class="footer-top goto"><img src="./assets/img/arrow_upward_24px.svg" alt=""></a>
         <div class="footer__copyright">
           <p class="footer__copyright-text"><a class="link link_theme_dark" href="#">SFERA position</a></p>
           <p class="footer__copyright-text">© Copyright 2019-2022 <a class="link link_theme_dark" href="https://sfera.zone">https://sfera.zone</a> — SFERA Project | All rights reserved by SPHERE LLC</p>
