--- a/cs/news.html
+++ b/cs/news.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <div class="page">
-    <nav class="nav_menu">
+    <nav class="nav_menu" id="section__landing">
         <input type="checkbox" class="myCheckBox" id="myCheck">
         <label for="myCheck" class="checkButton">
             <i class="fa fa-bars"></i>
@@ -1000,7 +1000,7 @@
 						<li class="socials-list__item"><a class="socials-list__link socials-list_type_instagram" href=" https://www.instagram.com/sfera_motivator/"target="_blank" title="Our Instagram">Instagram </a></li>
           </ul>
         </div>
-        <a href="" class="footer-top"><img src="../assets/img/arrow_upward_24px.svg" alt=""></a>
+        <a href="#section__landing" class="footer-top"><img src="../assets/img/arrow_upward_24px.svg" alt=""></a>
         <div class="footer__copyright">
 
           <p class="footer__copyright-text"><a class="link link_theme_dark" href="#">Podmínky používání SFERA</a></p>
