--- a/ru/news.html
+++ b/ru/news.html
@@ -177,7 +177,7 @@
                     <div id="modalOne" class="modalOne">
                       <div class="modal-content-one">
                         <span class="closeOne">&times;</span>
-                        <div class="modal-main">
+                        <div class="modal-main" id="modal-main">
                           <h2>ОБНОВЛЕНИЕ 29.12. 2022</h2>
                           <p>29.12.2022 ОТ DIANA AKHMETOVA КОММЕНТАРИИ</p>
                         </div>
@@ -192,6 +192,7 @@
                             <p>Пользователи iOS также могут блокировать пользователей в ASAP, а голосовые сообщения от Android теперь приходят без ошибок.</p> 
                             <p>Помимо всего перечисленного исправлены и многие другие ошибки, которые вы помогаете нам выявлять.</p>
                             <p>Пользуйтесь SFERA, повышайте свой рейтинг и не забывайте отправлять нам  предложения по улучшению работы приложения.</p>
+                            <div class="modal-footer"><a href="#modal-main" class="modal-arrow"><img src="/assets/img/icons/up-arrow-svgrepo-com.svg" alt=""></a></div>
                         </div>
                       </div>
                     </div>
@@ -217,7 +218,7 @@
                       <div id="modalTwo" class="modalTwo">
                         <div class="modal-content-two">
                           <span class="closeTwo">&times;</span>
-                          <div class="modal-main">
+                          <div class="modal-main" id="modal-main2">
                             <h2>ОБНОВЛЕНИЕ 05.12.2022</h2>
                             <p>05.12.2022 ОТ DIANA AKHMETOVA КОММЕНТАРИИ</p>
                           </div>
@@ -229,6 +230,7 @@
                             <p>Наши разработчики усердно трудятся над усовершенствованием приложения. Уже сейчас на iOS (v0.93.32) проведена оптимизация кода Ленты SFERA и функционала счетчика непрочитанных сообщений в ASAP, что позволяет более быстро находить недочеты и дорабатывать приложения. </p>
                             <p>На Android (v0.0.94) переписана логика работы со временем сообщений, благодаря чему исправлены баги с порядком сообщений и повторением дат между ними. Ошибки, возникающие при видео или аудио звонках, исправлены, а также добавлен функционал отображения ссылок в информации о чате. Реализована пагинация Хроник в Профиле пользователя, что позволяет отображать контент в ленте в хронологическом порядке.</p>  
                             <p>Наша команда благодарит Вас за то, что помогаете сделать приложение SFERA лучше! Мы убедительно просим вас активно пользоваться приложением и сообщать нашей команде о недочетах в системе и пожеланиях по ее улучшению. </p>
+                            <div class="modal-footer"><a href="#modal-main2" class="modal-arrow"><img src="/assets/img/icons/up-arrow-svgrepo-com.svg" alt=""></a></div>
                         </div>
                         </div>
                       </div>
@@ -254,7 +256,7 @@
                         <div id="modalThree" class="modalThree">
                           <div class="modal-content-three">
                             <span class="closeThree">&times;</span>
-                            <div class="modal-main">
+                            <div class="modal-main" id="modal-main3">
                               <h2>ОБНОВЛЕНИЕ 16.11.2022</h2>
                               <p>17.11.2022 ОТ DIANA AKHMETOVA КОММЕНТАРИИ</p>
                             </div>
@@ -270,6 +272,7 @@
                               <p>На платформе IOS добавили счетчик непрочитанных сообщений в ASAP. А еще мы поправили целый ряд багов во всем приложении на обеих платформах.</p> 
                               <p>Вот и всё на сегодня. Пользуйтесь SFERA,  тестируйте видеозвонки с друзьями и близким и, пожалуйста, если возникают трудности или ошибки пишите нам.</p>
                               <p>С уважением, ваш Проект SFERA</p>
+                              <div class="modal-footer"><a href="#modal-main3" class="modal-arrow"><img src="/assets/img/icons/up-arrow-svgrepo-com.svg" alt=""></a></div>
                             </div>
                           </div>
                         </div>
@@ -295,7 +298,7 @@
                           <div id="modalFor" class="modalFor">
                             <div class="modal-content-for">
                               <span class="closeFor">&times;</span>
-                              <div class="modal-main">
+                              <div class="modal-main" id="modal-main4">
                                 <h2>ЛЕНТА СФЕРА — ЭТО?<br>ОБНОВЛЕНИЕ 16.11.2022</h2>
                                 <p>02.11.2022 ОТ DIANA AKHMETOVA</p>
                               </div>
@@ -315,6 +318,7 @@
                                 <p>Ленту SFERA вы настраиваете под свои предпочтения. Для этого есть фильтры: все, подписки, рекомендованное, выбрать на карте. То есть в Ленте появятся или новости из ваших подписок, или то, что рекомендует система, или новости, например, конкретного региона или города. Нажав «Все», вы будете видеть все публикации пользователей SFERA. Чтобы подписаться на пользователя, перейдите в его профиль и нажмите на «Подписаться».</p> 
 
                                 <p>А пока система рейтинга формируется, мы призываем вас активно реагировать на публикации в Ленте и стараться оценивать объективно. Так, с вашей помощью, мы сможем продвигать полезный контент и отсеивать некачественный. И, зайдя в Ленту SFERA, вы будете проводить время с пользой и узнавать то, что сами захотите.  </p>
+                                <div class="modal-footer"><a href="#modal-main4" class="modal-arrow"><img src="/assets/img/icons/up-arrow-svgrepo-com.svg" alt=""></a></div>
                               </div>
                             </div>
                           </div>
